src/test/ui/feature-gates/feature-gate-asm2.stderr
error[E0658]: inline assembly is not stable enough for use and is subject to change (see issue #29722)
  --> $DIR/feature-gate-asm2.rs:5:26
   |
LL |         println!("{:?}", asm!(""));
   |                          ^^^^^^^^
   |
   = help: add #![feature(asm)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
