src/test/ui/feature-gates/feature-gate-asm2.rs
// ignore-emscripten

fn main() {
    unsafe {
        println!("{:?}", asm!("")); //~ ERROR inline assembly is not stable
    }
}
